cmake_minimum_required(VERSION 3.5)
project(bag2pclply)

set(CMAKE_CXX_STANDARD 14)
set(REALSENSE2_DIR "/usr/include/librealsense2")
find_package(realsense2 REQUIRED)
find_package(OpenCV REQUIRED)
find_package(Threads REQUIRED)
add_executable(bag2png main.cpp)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
target_link_libraries(bag2png ${OpenCV_LIBS})
target_link_libraries(bag2png Threads::Threads)
target_link_libraries (bag2png ${PCL_LIBRARIES})
if(realsense2_FOUND)
    include_directories(${realsense_INCLUDE_DIR})
    target_link_libraries(bag2png ${realsense2_LIBRARY})
endif()
